--- a/dotfiles/aerospace.toml
+++ b/dotfiles/aerospace.toml
@@ -115,16 +115,16 @@ alt-shift-minus = 'resize smart -50'
 alt-shift-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace ⏀'
-alt-2 = 'workspace ⏃'
-alt-3 = 'workspace ⏆'
-alt-4 = 'workspace ┼'
+alt-1 = 'workspace ⏂'
+alt-2 = 'workspace ⏅'
+alt-3 = 'workspace ⏈'
+alt-4 = 'workspace ⏊'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace ⏀'
-alt-shift-2 = 'move-node-to-workspace ⏃'
-alt-shift-3 = 'move-node-to-workspace ⏆'
-alt-shift-4 = 'move-node-to-workspace ┼'
+alt-shift-1 = 'move-node-to-workspace ⏂'
+alt-shift-2 = 'move-node-to-workspace ⏅'
+alt-shift-3 = 'move-node-to-workspace ⏈'
+alt-shift-4 = 'move-node-to-workspace ⏊'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 # alt-tab = 'workspace-back-and-forth'
