--- a/dotfiles/aerospace.toml
+++ b/dotfiles/aerospace.toml
@@ -138,15 +138,16 @@ alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
 
+alt-f = [
+    'layout floating tiling',
+    'mode main',
+] # Toggle between floating and tiling layout
+
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
-r = ['flatten-workspace-tree', 'mode main'] # reset layout
-f = [
-    'layout floating tiling',
-    'mode main',
-] # Toggle between floating and tiling layout
+r = ['flatten-workspace-tree', 'mode main']                # reset layout
 backspace = ['close-all-windows-but-current', 'mode main']
 
 # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
@@ -158,6 +159,15 @@ alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
 
 [[on-window-detected]]
-if.app-id = 'cc.ffitch.shottr'
-if.app-name-regex-substring = 'Shottr'
+if.app-name-regex-substring = ''
 run = ['layout floating']
+
+# [[on-window-detected]]
+# if.app-id = 'cc.ffitch.shottr'
+# if.app-name-regex-substring = 'Shottr'
+# run = ['layout floating']
+
+# [[on-window-detected]]
+# if.app-id = 'com.macpaw.site.theunarchiver'
+# if.app-name-regex-substring = 'The Unarchiver'
+# run = ['layout floating']
